v0.6.3 - 04/15/2017

STATE FILE COMPATIBILITY - v0.5.2 and greater

* Updated Serialization format to JSON.  Loading legacy state files is still supported for now, however, all new state files will be saved to the new format.

* New context options for sending cookies to users

* Fixed bug in chaining where content-length wouldn't update appropriately

v0.6.2 - 10/31/2016

STATE FILE COMPATIBILITY - v0.5.2 and greater

* Fixed a bug when sending a result RequestResponse to another area of Burp, such as Repeater

* Add "Cancel" button to end runs early

* Increase default run timeout

* Updated UI: Add HTTP verb to default request name, Allow shrinking of unused columns in User Table, Improved locking UI during a run

v0.6.1 - 10/13/2016

STATE FILE COMPATIBILITY - v0.5.2 and greater

* Bug fix with Failure Regex - Image in README now shows correct usage example

v0.6.0 - MAJOR UPDATE - 10/11/2016

STATE FILE COMPATIBILITY - v0.5.2 and greater

* Chains:
 - New advanced configuration table for chaining several messages together
 - Can be used for Advanced CSRF Token handling or propagating IDs/GUIDs to later messages
 - See README for instructions and examples

* Added Drag-and-Drop Reorder for Requests in Message Table:
 - Required to support Chains

* New Columns in User and Message Table:
 - Separate columns for cookies, headers, and POST args for clarity
 - Supports use-case where user requires both a header and cookies
 - Both tables now use index identifier instead of row number

* Update Color Scheme:
 - Blue for False Positive and purple for Failure Regex
 - Colored highlighting of selected rows

* Allow Editing base requests from AuthMatrix
 - Only works when the message has been altered with a keyboard (i.e. not "Change request method" or "Change body encoding")
 - https://support.portswigger.net/customer/en/portal/questions/16705314-imessageeditor-ismessagemodified-does-not-detect-modification

* Change Target Domain: